# whyTalk

./: .env  .env.electron  .env.production  .gitignore  EXTENSION_PACKAGING.md  EXTISM_SOLUTION.md  README.md  README_UPDATE.md  SETTINGS_MENU_SOLUTION.md  UI_ANALYSIS_REPORT.md  UPLOAD_SETUP.md  auto-imports.d.ts  components.d.ts  debug-capabilities.js  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  fix-p2p-service.ps1  multi-user-config.json  multi_client_test.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-client.bat  test-electron-api.html  test-plugin-api.js  test-plugin-config.html  test-plugin-execution.js  test-plugins.js  test-regex-fix.js  test-tgz-plugin.tgz  tsconfig.web.json  upload.config.js  vite.config.ts  分布式p2p的IM应用方案.md
doc/: AUTO_UPDATE_GUIDE.md  AUTO_UPLOAD_GUIDE.md  DATABASE_SETUP.md  EXTISM_COMPATIBILITY.md  EXTISM_SOLUTION.md  FRONTEND_MIGRATION_PLAN.md  FRONTEND_TO_PLUGIN_MIGRATION.md  LOCAL_SERVICE_README.md  LOGIN_TEST_REPORT.md  MENU_DEBUG_GUIDE.md  MIGRATION_PROGRESS.md  MULTI_CLIENT_TEST.md  MULTI_USER_P2P_GUIDE.md  P2P_API_FIX_REPORT.md  P2P_FEATURE_README.md  P2P_IMPLEMENTATION_SUMMARY.md  P2P_LIBP2P_COMPATIBILITY_REPORT.md  P2P_MIGRATION_PLAN.md  P2P_PAGE_FIX_REPORT.md  PLATFORM_API_DOCUMENTATION.md  PLUGIN_FORMAT_SPECIFICATION.md  PLUGIN_MANAGEMENT_REQUIREMENTS.md  PNPM_WORKSPACE_MIGRATION.md  PRETTIER_ESLINT_SETUP.md  README_UPDATE.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  UPLOAD_SETUP.md  (+18 more)
plugins/system-example/: Cargo.toml  build.bat  build.sh  cubeModule.json
plugins/system-example/src/: lib.rs
(+709 files in other folders)
