[package]
name = "system-example"
version = "1.0.0"
edition = "2021"
authors = ["Why-Talk Team"]
description = "A system plugin example for Why-Talk using Extism WASM runtime"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"  # 优化大小
lto = true       # 链接时优化
codegen-units = 1
panic = "abort"

# WASM 特定配置
[target.wasm32-unknown-unknown]
rustflags = [
  "-C", "link-arg=-zstack-size=65536",  # 设置栈大小
  "-C", "target-feature=+bulk-memory",   # 启用批量内存操作
]